<resources>
    <string name="app_name">Connect</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="favorite">favorite</string>
    <string name="tittle_setting">setting</string>
    <string name="titlle_about">about</string>
    <string name="type">type\n</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="switchoff">switchoff</string>
    <string name="text_desc">Aplikasi Pencarian GitHub User adalah alat yang berguna bagi pengguna GitHub yang ingin dengan mudah mencari dan menemukan profil pengguna GitHub. Dengan fitur-fitur canggih dan antarmuka yang ramah pengguna, aplikasi ini memudahkan pengguna untuk menjelajahi berbagai informasi terkait pengguna GitHub.</string>
    <string name="textsearchbar_hint">textsearchbar_hint</string>
    <string name="title_setting">Setting</string>
    <string name="title_about">About</string>
    <string name="name_account">Name Account</string>
    <string name="label_nama">Name</string>
    <string name="label_company">Company</string>
    <string name="label_location">Location</string>
    <string name="label_email">Email</string>
    <string name="label_twitter">Twitter</string>
    <string name="label_jumlah_repository">Repository</string>
    <string name="jumlah_repository">0</string>
    <string name="label_jumlah_gist">Gist</string>
    <string name="jumlah_gist">0</string>
    <string name="label_jumlah_pengikut">Followers</string>
    <string name="jumlah_pengikut">0</string>
    <string name="label_jumlah_following">Following</string>
    <string name="jumlah_following">0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="versi_1_0">Versi 1.0</string>
    <string name="title_favorite">Favorite</string>
</resources>