<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detailuser.DetailActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_share"
        app:layout_constraintEnd_toStartOf="@+id/iv_avatar"
        app:layout_constraintHorizontal_bias="0.271"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/fab_favorite"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:textOn=""
        android:textOff=""
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:background="@drawable/button_fav"
        android:importantForAccessibility="no"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.719"
        app:layout_constraintStart_toEndOf="@+id/iv_avatar"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView

        android:id="@+id/iv_avatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:padding="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:strokeWidth="4dp"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="25dp"
        android:text="@string/name_account"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_avatar" />
    <TextView
        android:id="@+id/tv_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_nama"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_username"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"/>
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toEndOf="@+id/tv_name_label"
        app:layout_constraintTop_toTopOf="@+id/tv_name_label"
        android:layout_marginStart="8dp"/>
    <TextView
        android:id="@+id/tv_company_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_company"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/tv_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tv_company_label"
        app:layout_constraintTop_toTopOf="@+id/tv_company_label"
        android:layout_marginStart="8dp"/>
    <TextView
        android:id="@+id/tv_location_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_location"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_company"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tv_location_label"
        app:layout_constraintTop_toTopOf="@+id/tv_location_label"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/tv_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_email"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_location"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tv_email_label"
        app:layout_constraintTop_toTopOf="@+id/tv_email_label"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/tv_twitter_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_twitter"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/tv_twitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tv_twitter_label"
        app:layout_constraintTop_toTopOf="@+id/tv_twitter_label"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/tv_repository_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_jumlah_repository"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_twitter"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/tv_repository_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/jumlah_repository"
        app:layout_constraintStart_toEndOf="@+id/tv_repository_label"
        app:layout_constraintTop_toTopOf="@+id/tv_repository_label" />

    <TextView
        android:id="@+id/tv_gist_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/label_jumlah_gist"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tv_repository_count"
        app:layout_constraintTop_toTopOf="@+id/tv_repository_label" />

    <TextView
        android:id="@+id/tv_gist_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/jumlah_gist"
        app:layout_constraintBottom_toTopOf="@+id/tv_following_count"
        app:layout_constraintStart_toEndOf="@+id/tv_gist_label"
        app:layout_constraintTop_toTopOf="@+id/tv_gist_label"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_followers_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_jumlah_pengikut"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_gist_label"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/tv_followers_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/jumlah_pengikut"
        app:layout_constraintStart_toEndOf="@+id/tv_followers_label"
        app:layout_constraintTop_toTopOf="@+id/tv_followers_label" />

    <TextView
        android:id="@+id/tv_following_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_jumlah_following"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tv_followers_count"
        app:layout_constraintTop_toTopOf="@+id/tv_followers_label"
        android:layout_marginStart="25dp" />

    <TextView
        android:id="@+id/tv_following_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jumlah_following"
        app:layout_constraintStart_toEndOf="@+id/tv_following_label"
        app:layout_constraintTop_toTopOf="@+id/tv_following_label"
        android:layout_marginStart="8dp" />


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_following_count"
        android:layout_marginTop="16dp" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tabs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>